# kibana-ql-python

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: pythonpackage.yml
kibana_ql/: __init__.py  kql.parsimonious  kql.py
tests/: kql_test.py
